@@ -1,27 +1,29 @@
-from decimal import Decimal
-import simplejson
-
 from Acquisition import aq_inner, aq_parent
-from Products.CMFCore.utils import getToolByName
-from Products.Five.browser import BrowserView
-from Products.Five.browser.pagetemplatefile import ViewPageTemplateFile
-from zope.component import getAdapters
-from zope.component import getMultiAdapter
-from zope.component import getUtility
-from plone.registry.interfaces import IRegistry
-
+from decimal import Decimal
+from ftw.shop import shopMessageFactory as _
 from ftw.shop.config import CART_KEY
 from ftw.shop.config import SESSION_ADDRESS_KEY, ONACCOUNT_KEY
 from ftw.shop.exceptions import MissingCustomerInformation
-from ftw.shop.exceptions import MissingShippingAddress
 from ftw.shop.exceptions import MissingOrderConfirmation
 from ftw.shop.exceptions import MissingPaymentProcessor
-from ftw.shop.interfaces import IVariationConfig
+from ftw.shop.exceptions import MissingShippingAddress
 from ftw.shop.interfaces import IPaymentProcessor
 from ftw.shop.interfaces import IShopConfiguration
-
+from ftw.shop.interfaces import IShoppingCart
+from ftw.shop.interfaces import IVariationConfig
 from ftw.shop.utils import get_shop_root_object
-from ftw.shop import shopMessageFactory as _
+from plone.registry.interfaces import IRegistry
+from Products.CMFCore.utils import getToolByName
+from Products.Five.browser import BrowserView
+from Products.Five.browser.pagetemplatefile import ViewPageTemplateFile
+from zope.component import adapts
+from zope.component import getAdapters
+from zope.component import getMultiAdapter
+from zope.component import getUtility
+from zope.interface import implements
+from zope.interface import Interface
+from zope.publisher.interfaces.browser import IBrowserRequest
+import simplejson
 
 
 def calc_vat(rate, price, qty=1):
@@ -32,84 +34,113 @@ def calc_vat(rate, price, qty=1):
     return vat_amount
 
 
-class CartView(BrowserView):
-    """Handles the customer's shopping cart and stores it in the user's
-    session.
-    This view is responsible for adding, updating and removing items from
-    the cart, as well as calculating the current cart total.
+class ShoppingCartAdapter(object):
+    """Adapter that represents the shopping cart for the current user, defined
+    by the adapted context and request.
+
+    This adapter is responsible for adding, updating and removing items from the
+    cart and storing that information in the user's session, as well as
+    calculating the current cart total.
     """
-    portlet_template = ViewPageTemplateFile('../portlets/cart.pt')
+    implements(IShoppingCart)
+    adapts(Interface, IBrowserRequest)
 
-    def addtocart_ajax(self, skuCode=None, quantity=1,
-                       var1choice=None, var2choice=None):
-        """ Add item to cart, return portlet HTML and translated status
-        message
+    def __init__(self, context, request):
+        self.context = context
+        self.request = request
+
+    @property
+    def catalog(self):
+        if not hasattr(self, '_catalog'):
+            self._catalog = getToolByName(self.context, 'portal_catalog')
+        return self._catalog
+
+    def get_items(self):
+        """Get all items currently contained in shopping cart
         """
-        translate = self.context.translate
+        # Avoid creating a session if there doesn't exist one yet.
+        bid_manager = getToolByName(self.context, 'browser_id_manager')
+        browser_id = bid_manager.getBrowserId(create=0)
+        if not browser_id:
+            return {}
+        session = self.request.SESSION
+        items = session.get(CART_KEY, {})
+        return items
 
-        success = self._addtocart(skuCode, quantity, var1choice, var2choice)
-        if success:
-            status_msg_label = _(u'msg_label_info', default=u"Information")
-            status_msg_text = _(u'msg_item_added', default=u"Added item to cart.")
-        else:
-            status_msg_label = _(u'msg_label_error', default=u"Error")
-            status_msg_text = _(u'msg_item_disabled', default=u"Item is disabled and can't be added.")
-
-        status_message = """\
-<dt>%s</dt>
-<dd>%s</dd>""" % (translate(status_msg_label),
-               translate(status_msg_text))
-
-        return simplejson.dumps(dict(portlet_html=self.portlet_template(),
-                    status_message=status_message))
-
-    def addtocart(self, skuCode=None, quantity=1,
-                  var1choice=None, var2choice=None):
-        """Add item to cart and redirect to referer.
-
-        The item must be identified by either its skuCode if it is an item
-        without variations, or by its variation key.
+    def get_vat(self):
+        """Return the cart's total VAT as a string
         """
-        context = aq_inner(self.context)
-        ptool = getToolByName(context, 'plone_utils')
+        items = self.get_items()
+        vat_total = Decimal('0.00')
+        for item in items.values():
+            vat_total += Decimal(item['vat_amount'])
+        return str(vat_total)
 
-        # Add item to cart
-        success = self._addtocart(skuCode, quantity, var1choice, var2choice)
-        if success:
-            ptool.addPortalMessage(_(u'msg_item_added',
-                                     default=u'Added item to cart.'), 'info')
-        else:
-            ptool.addPortalMessage(_(u'msg_item_disabled',
-                                     default=u'Item is disabled and can\'t be added.'), 'error')
+    def get_total(self):
+        """Return the cart's total as a string
+        """
+        items = self.get_items()
+        total = Decimal('0.00')
+        for item in items.values():
+            total += Decimal(item['total'])
+        return str(total)
 
-        # redirect to referer
-        referer = self.request.get('HTTP_REFERER', context.absolute_url())
-        if referer == 'localhost':
-            referer = context.absolute_url()
-        self.request.response.redirect(referer)
+    def _get_supplier_info(self, context):
+        supplier = self._get_supplier(context)
+        if supplier:
+            supplier_name = supplier.getField('title').get(supplier)
+            supplier_email = supplier.getField('email').get(supplier)
+            return supplier_name, supplier_email
+        return ('', '')
 
     def _get_supplier(self, context):
         """If available, get supplier name and email address
         """
-        supplier_name = ''
-        supplier_email = ''
-        # First check if parent cateogry has a supplier defined
+        # If item itself has a supplier, it has precedence over category supplier
+        if context.getField('supplier') is not None:
+            supplier = context.getField('supplier').get(context)
+            if supplier not in (None, ''):
+                return supplier
+
+        # If not, check if parent cateogry has a supplier defined
         parent_category = aq_parent(context)
         if parent_category.getField('supplier') is not None:
             category_supplier = parent_category.getField('supplier').get(parent_category)
             if category_supplier not in (None, ''):
-                supplier_name = category_supplier.getField('title').get(category_supplier)
-                supplier_email = category_supplier.getField('email').get(category_supplier)
+                return category_supplier
 
-        # If item itself has a supplier, override parent category supplier
-        if context.getField('supplier') is not None:
-            supplier = context.getField('supplier').get(context)
-            if supplier not in (None, ''):
-                supplier_name = supplier.getField('title').get(supplier)
-                supplier_email = supplier.getField('email').get(supplier)
-        return supplier_name, supplier_email
+        return None
 
-    def _addtocart(self, skuCode=None, quantity=1,
+    def get_suppliers(self):
+        suppliers = []
+        for uid in self.get_items():
+            item = self.catalog(UID=uid)[0].getObject()
+            supplier = self._get_supplier(item)
+            suppliers.append(supplier)
+        return suppliers
+
+    def get_show_prices(self):
+        for item in self.get_items().values():
+            if item['show_price']:
+                return True
+        return False
+
+    def update_item(self, key, quantity):
+        """Update the quantity of an item.
+        """
+        session = self.request.SESSION
+        cart_items = session.get(CART_KEY, {})
+
+        if key in cart_items:
+            item = cart_items[key]
+            item['quantity'] = int(quantity)
+            item['total'] = str(Decimal(item['price']) * item['quantity'])
+            item['vat_amount'] = str(calc_vat(item['vat_rate'], item['price'], quantity))
+            cart_items[key] = item
+
+        session[CART_KEY] = cart_items
+
+    def _add_item(self, skuCode=None, quantity=1,
                    var1choice=None, var2choice=None):
         """ Add item to cart
         """
@@ -132,7 +163,7 @@ class CartView(BrowserView):
         quantity = int(quantity)
         vat_rate = Decimal(context.getField('vat').get(context))
 
-        supplier_name, supplier_email = self._get_supplier(context)
+        supplier_name, supplier_email = self._get_supplier_info(context)
 
         has_variations = varConf.hasVariations()
         if has_variations:
@@ -196,43 +227,32 @@ class CartView(BrowserView):
         session[CART_KEY] = cart_items
         return True
 
-    def cart_items(self):
-        """Get all items currently contained in shopping cart
+    def add_item(self, skuCode=None, quantity=1,
+                 var1choice=None, var2choice=None):
+        """Add item to cart and redirect to referer.
+
+        The item must be identified by either its skuCode if it is an item
+        without variations, or by its variation key.
         """
-        # Avoid creating a session if there doesn't exist one yet.
-        bid_manager = getToolByName(self.context, 'browser_id_manager')
-        browser_id = bid_manager.getBrowserId(create=0)
-        if not browser_id:
-            return {}
-        session = self.request.SESSION
-        items = session.get(CART_KEY, {})
-        return items
+        context = aq_inner(self.context)
+        ptool = getToolByName(context, 'plone_utils')
 
-    def show_prices(self):
-        for item in self.cart_items().values():
-            if item['show_price']:
-                return True
-        return False
+        # Add item to cart
+        success = self._add_item(skuCode, quantity, var1choice, var2choice)
+        if success:
+            ptool.addPortalMessage(_(u'msg_item_added',
+                                     default=u'Added item to cart.'), 'info')
+        else:
+            ptool.addPortalMessage(_(u'msg_item_disabled',
+                                     default=u'Item is disabled and can\'t be added.'), 'error')
 
-    def cart_total(self):
-        """Return the cart's total as a string
-        """
-        items = self.cart_items()
-        total = Decimal('0.00')
-        for item in items.values():
-            total += Decimal(item['total'])
-        return str(total)
+        # redirect to referer
+        referer = self.request.get('HTTP_REFERER', context.absolute_url())
+        if referer == 'localhost':
+            referer = context.absolute_url()
+        self.request.response.redirect(referer)
 
-    def cart_vat(self):
-        """Return the cart's total VAT as a string
-        """
-        items = self.cart_items()
-        vat_total = Decimal('0.00')
-        for item in items.values():
-            vat_total += Decimal(item['vat_amount'])
-        return str(vat_total)
-
-    def remove_item(self, key):
+    def _remove_item(self, key):
         """Remove the item with the given key from the cart.
         """
         session = self.request.SESSION
@@ -243,22 +263,37 @@ class CartView(BrowserView):
 
         session[CART_KEY] = cart_items
 
-    def update_item(self, key, quantity):
-        """Update the quantity of an item.
+    def remove_item(self):
+        """Remove an item from cart.
+        """
+        context = aq_inner(self.context)
+        ptool = getToolByName(context, 'plone_utils')
+        # remove_item doesn't expect skuCode but item keys - rename!
+        skuCode = self.request.get('skuCode')
+        if skuCode:
+            self._remove_item(skuCode)
+            ptool.addPortalMessage(_(u'msg_cart_updated',
+                                     default=u"Cart updated."), 'info')
+
+        referer = self.request.get('HTTP_REFERER', context.absolute_url())
+        self.request.response.redirect(referer)
+        return
+
+    def purge_cart(self):
+        """Remove all items from cart.
         """
         session = self.request.SESSION
-        cart_items = session.get(CART_KEY, {})
+        session[CART_KEY] = {}
 
-        if key in cart_items:
-            item = cart_items[key]
-            item['quantity'] = int(quantity)
-            item['total'] = str(Decimal(item['price']) * item['quantity'])
-            item['vat_amount'] = str(calc_vat(item['vat_rate'], item['price'], quantity))
-            cart_items[key] = item
+        context = aq_inner(self.context)
+        ptool = getToolByName(context, 'plone_utils')
+        ptool.addPortalMessage(_(u'msg_cart_emptied',
+                                 default=u"Cart emptied."), 'info')
+        referer = self.request.get('HTTP_REFERER', context.absolute_url())
+        self.request.response.redirect(referer)
+        return
 
-        session[CART_KEY] = cart_items
-
-    def cart_update(self):
+    def update_cart(self):
         """Update cart contents.
         """
         context = aq_inner(self.context)
@@ -267,7 +302,7 @@ class CartView(BrowserView):
         # first delete items with quantity 0
         del_items = []
         # XXX - these are not skuCodes but item keys - rename!
-        for skuCode in self.cart_items().keys():
+        for skuCode in self.get_items().keys():
             try:
                 qty = int(float(self.request.get('quantity_%s' % skuCode)))
                 if qty == 0:
@@ -282,10 +317,10 @@ class CartView(BrowserView):
                 self.request.response.redirect(referer)
                 return
         for skuCode in del_items:
-            self.remove_item(skuCode)
+            self._remove_item(skuCode)
 
         # now update quantities (and VAT amounts, done by update_item)
-        for skuCode, item in self.cart_items().items():
+        for skuCode, item in self.get_items().items():
             quantity = int(float(self.request.get('quantity_%s' % skuCode)))
             if quantity != item['quantity'] and quantity != 0:
                 self.update_item(skuCode, quantity)
@@ -296,35 +331,95 @@ class CartView(BrowserView):
         self.request.response.redirect(referer)
         return
 
+
+class CartView(BrowserView):
+    """Shopping Cart related helper view that takes care of tasks not done by
+    the IShoppingCart adapter.
+
+    For backwards compatibility, this view wraps many of the methods of said
+    adapter for now, but will eventually be phased out.
+    """
+
+    portlet_template = ViewPageTemplateFile('../portlets/cart.pt')
+
+    @property
+    def cart(self):
+        if not hasattr(self, '_cart'):
+            self._cart = getMultiAdapter((self.context, self.request),
+                                         IShoppingCart)
+        return self._cart
+
+    def addtocart_ajax(self, skuCode=None, quantity=1,
+                       var1choice=None, var2choice=None):
+        """ Add item to cart, return portlet HTML and translated status
+        message
+        """
+        translate = self.context.translate
+
+        success = self.cart._add_item(skuCode, quantity, var1choice, var2choice)
+        if success:
+            status_msg_label = _(u'msg_label_info', default=u"Information")
+            status_msg_text = _(u'msg_item_added', default=u"Added item to cart.")
+        else:
+            status_msg_label = _(u'msg_label_error', default=u"Error")
+            status_msg_text = _(u'msg_item_disabled', default=u"Item is disabled and can't be added.")
+
+        status_message = """\
+<dt>%s</dt>
+<dd>%s</dd>""" % (translate(status_msg_label),
+               translate(status_msg_text))
+
+        return simplejson.dumps(dict(portlet_html=self.portlet_template(),
+                    status_message=status_message))
+
+    def addtocart(self, skuCode=None, quantity=1,
+                  var1choice=None, var2choice=None):
+        """Add item to cart and redirect to referer.
+
+        The item must be identified by either its skuCode if it is an item
+        without variations, or by its variation key.
+        """
+        return self.cart.add_item(skuCode=skuCode, quantity=quantity,
+                                  var1choice=var1choice, var2choice=var2choice)
+
+    def cart_items(self):
+        """Get all items currently contained in shopping cart
+        """
+        return self.cart.get_items()
+
+    def show_prices(self):
+        return self.cart.get_show_prices()
+
+    def cart_total(self):
+        """Return the cart's total as a string
+        """
+        return self.cart.get_total()
+
+    def cart_vat(self):
+        """Return the cart's total VAT as a string
+        """
+        return self.cart.get_vat()
+
+    def update_item(self, key, quantity):
+        """Update the quantity of an item.
+        """
+        return self.cart.update_item(key, quantity)
+
+    def cart_update(self):
+        """Update cart contents.
+        """
+        return self.cart.update_cart()
+
     def cart_remove(self):
         """Remove an item from cart.
         """
-        context = aq_inner(self.context)
-        ptool = getToolByName(context, 'plone_utils')
-        # remove_item doesn't expect skuCode but item keys - rename!
-        skuCode = self.request.get('skuCode')
-        if skuCode:
-            self.remove_item(skuCode)
-            ptool.addPortalMessage(_(u'msg_cart_updated',
-                                     default=u"Cart updated."), 'info')
-
-        referer = self.request.get('HTTP_REFERER', context.absolute_url())
-        self.request.response.redirect(referer)
-        return
+        return self.cart.remove_item()
 
     def cart_delete(self):
         """Remove all items from cart.
         """
-        session = self.request.SESSION
-        session[CART_KEY] = {}
+        return self.cart.purge_cart()
 
-        context = aq_inner(self.context)
-        ptool = getToolByName(context, 'plone_utils')
-        ptool.addPortalMessage(_(u'msg_cart_emptied',
-                                 default=u"Cart emptied."), 'info')
-        referer = self.request.get('HTTP_REFERER', context.absolute_url())
-        self.request.response.redirect(referer)
-        return
 
     def checkout(self):
         """Process checkout
