@@ -4,6 +4,9 @@ Changelog
 1.1.3 (unreleased)
 ------------------
 
+- Moved shopping cart functionality into its own adapter (IShoppingCart).
+  [lgraf]
+
 - Lawgiver support: map permissions.
   [jone]
 
